# gemini-finance-ai-agent

./: .env.template  .gitignore  Deployment.txt  LICENSE  README.md  pyproject.toml
finance_agent/: agent.py  prompts.py
finance_agent/tools/: bigquery_tools.py
