[project]
name = "fpna-variance-agent"
version = "0.1.0"
description = "FP&A Variance Analysis Agent using BigQuery and ADK"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk",
    "google-adk[extensions]",
    "click",
    "a2a-sdk",
    "nest-asyncio",
    "python-dotenv",
    "uvicorn",
    "google-generativeai",
    "httpx",
]

[dependency-groups]
dev = [
    "asyncer",
    "httpx",
    "typer",
    "mypy",
    "pytest-cov",
    "ruff",
    "dunamai",
    "pre-commit",
    "isort",
    "pytest",
    "pytest-mock",
    "pytest-asyncio",
    "polyfactory",
    "faker",
    "gevent",
]

[tool.uv]
managed = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "alteryx"
url = "https://artifactory.alteryx.com/artifactory/api/pypi/PyPi/simple"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentyx"]